# PongANN

./: ANN.cpp  ANN.h  ANNAI.cpp  ANNAI.h  Ball.cpp  Ball.h  BasicAI.cpp  BasicAI.h  CMakeLists.txt  HumanPlayer.cpp  HumanPlayer.h  Matrix.cpp  Matrix.h  Optimizer.cpp  Optimizer.h  Paddle.cpp  Paddle.h  ParticleSwarm.cpp  ParticleSwarm.h  Physics.cpp  Physics.h  Player.cpp  Player.h  Pong.cpp  Pong.h  README.txt  Vector2.cpp  Wall.h
PongJS/: AI.js  index.html  neuralnet.js  pong.css  pong.js
include/: ANN.h  ANNAI.h  ANNAITrainer.h  Ball.h  BasicAI.h  DifferentialEvolution.h  HumanPlayer.h  Optimizer.h  Paddle.h  Player.h  Pong.h  Vector2.h
src/: ANN.cpp  ANNAI.cpp  ANNAITrainer.cpp  Ball.cpp  DifferentialEvolution.cpp  Optimizer.cpp  Paddle.cpp  Player.cpp  Pong.cpp  Wall.cpp  main.cpp
